--- a/privacy.html
+++ b/privacy.html
@@ -11,13 +11,13 @@
 ---
 
 # **Privacy Policy**
-**Last Updated:** [Date]
+**Last Updated:** February 2024
 
 ## **1. Introduction**
-Welcome to **[Your App Name]** (the "App"). Your privacy is important to us. This Privacy Policy explains how we handle your personal information when you use our **offline music player** application.
+Welcome to **Offline Music Player** (the "App"). Your privacy is important to us. This Privacy Policy explains how we handle your personal information when you use our **offline music player** application.
 
 ## **2. Information We Do Not Collect**
-Since **[Your App Name]** is an **offline music player**, we do **not** collect, store, or share any personal data, including but not limited to:
+Since **Music Player** is an **offline music player**, we do **not** collect, store, or share any personal data, including but not limited to:
 ✅ No personal information (name, email, phone number)
 ✅ No online activity tracking
 ✅ No media usage data sent to servers
@@ -40,8 +40,8 @@ We may update this Privacy Policy periodically. Any changes will be reflected in
 
 ## **7. Contact Us**
 If you have any questions about this Privacy Policy, feel free to contact us at:
-📧 **Email:** [Your Contact Email]
-🌐 **Website:** [Your Website (if applicable)]
+📧 **Email:** heircodesoftwaresolutions@gmail.com
+🌐 **Website:** heircode.com
 
 ---
 
